# vemf

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: not-yet-pages.yml  pages.yml
cli/: Cargo.toml  main.rs
doc/: do  do.bat  do.sh  docs.html  gen.vemf  head.html  raw.txt
scripts/: args.vemf  brainfuck.vemf  cat.vemf  fizzbuzz.vemf  pascal.vemf  rule90.vemf  sierpinski.vemf  test.vemf
scripts/aoc2022/: d01.vemf  d02.vemf  d03.vemf  d04.vemf  d05.vemf  d06.vemf  d07.vemf  d08.vemf  d09.vemf  d10.vemf  d11.vemf  d12.vemf  d13.vemf  d14.vemf
scripts/aoc2022/in/: d09.txt  d11.txt  d13.txt
src/: codepage.rs  lib.rs  main.rs  parse.rs  std.vemf  test.rs  token.rs
src/run/: adverb.rs  disp.rs  func.rs  intrinsics.rs  intrn.rs  io.rs  list.rs  mod.rs  number.rs  val.rs
src/test/: mod.rs  test.vemf
wasm/: Cargo.toml  do  do.sh  flake.nix  index.html  lib.rs
wasm/pkg/: vemfwasm.js  vemfwasm_bg.wasm
