[package]
name = "vemf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# small byte strings
smallvec = { version = "1.10", features = ["union"] }
# random number generation
rand = { version = "0.8", default-features = false, features = ["alloc"] }
# complex numbers
num-complex = "0.4"
# gcd, lcm, binom
num-integer = "0.1"
# gamma (not complex (i have to look for a better library))
libm = "0.2"
# HashMap and HashSet for no_std
hashbrown = "0.13"

[features]
std = []

[workspace]
members = ["cli", "wasm"]
