[package]
name = "vemf"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vemf"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
# small byte strings
smallvec = { version = "1.10", features = ["union"], optional = true }
# random number generation
rand = { version = "0.8", default-features = false, features = ["alloc"] }
# complex numbers
num-complex = "0.4"
# gamma (not complex (i have to look for a better library))
libm = "0.2"
# HashMap and HashSet for no_std
hashbrown = "0.13"

[features]
default = ["smallvec"]
std = []
bin = ["std", "rand/std", "rand/std_rng"]

[workspace]
members = ["wasm"]

[profile.wasm]
inherits = "release"
opt-level = "s"
lto = true
