[package]
name = "vemfcli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vemf"
path = "main.rs"

[dependencies]
vemf = { path = "..", features = ["std"] }
rand = { version = "0.8", features = ["std"] }

# command line argument parsing
[dependencies.clap]
version = "3.2"
features = ["std", "derive", "wrap_help"]
default-features = false